# knork

./: .gitignore  CMakeLists.txt  README.md
src/: Knork.cpp  commandLineRunner.cpp  errorCodes.hpp  irunner.cpp  knorkFileRunner.cpp  main.cpp  runner.hpp
